--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VGuard</title>
-    <meta name="description" content="KODEGUS Project" />
-    <meta name="author" content="KODEGUS" />
 
-    <meta property="og:title" content="vgurad" />
-    <meta property="og:description" content="KODEGUS Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VGuard</title>
+  <meta name="description" content="KODEGAS Project" />
+  <meta name="author" content="KODEGAS" />
 
-  </head>
+  <meta property="og:title" content="vgurad" />
+  <meta property="og:description" content="KODEGAS Project" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="" />
+
+</head>
 
 <body>
   <div id="root"></div>
