Revert "feat: add saved results and notes functionality"
This reverts commit cec99042a849f787a6da30e78c0c3dc0af71c889.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>VGuard</title>
+    <meta name="description" content="KODEGUS Project" />
+    <meta name="author" content="KODEGUS" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VGuard</title>
-  <meta name="description" content="KODEGAS Project" />
-  <meta name="author" content="KODEGAS" />
+    <meta property="og:title" content="vgurad" />
+    <meta property="og:description" content="KODEGUS Project" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
 
-  <meta property="og:title" content="vgurad" />
-  <meta property="og:description" content="KODEGAS Project" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="" />
-
-</head>
+  </head>
 
 <body>
   <div id="root"></div>
