make meta tags seo friendly export function makeMetaTagsSeoFriendly(metaTags) {   if (!metaTags || typeof metaTags !== 'object') {     return {};   }

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,20 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WeGuard</title>
-    <meta name="description" content="KODEGAS Project" />
+
+    <title>WeGuard by KODEGAS | Secure Access & Protection Platform</title>
+    <meta
+      name="description"
+      content="WeGuard by KODEGAS is a next-generation security and protection platform designed to ensure privacy, access control, and enterprise-grade protection for individuals and businesses."
+    />
+
+    <!-- ✅ Author -->
     <meta name="author" content="KODEGAS" />
 
-    <meta property="og:title" content="WeGuard" />
-    <meta property="og:description" content="KODEGAS Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+    <!-- ✅ Keywords (helps slightly with SEO) -->
+    <meta
+      name="keywords"
+      content="WeGuard, KODEGAS, security platform, access control, enterprise security, privacy, protection"
+    />
 
+    <!-- ✅ Open Graph (Social Media Preview) -->
+    <meta property="og:title" content="WeGuard by KODEGAS" />
+    <meta
+      property="og:description"
+      content="Next-generation security platform by KODEGAS for access control, privacy, and enterprise protection."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://weguard.kodegas.com" />
+    <meta property="og:image" content="https://www.kodegas.com/uploads/logo.png" />
+
+    <!-- ✅ Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="WeGuard by KODEGAS" />
+    <meta
+      name="twitter:description"
+      content="A secure and reliable protection platform by KODEGAS for enterprises and individuals."
+    />
+    <meta name="twitter:image" content="https://www.kodegas.com/uploads/logo.png" />
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
