https://weguard.kodegas.com/uploads/logo.png changed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://weguard.kodegas.com/" />
     <meta property="og:title" content="WeGuard - AI-Powered Crop Disease Detection & Agricultural Management" />
     <meta property="og:description" content="Revolutionary AI platform helping farmers detect crop diseases instantly with 90% accuracy. Get expert treatment recommendations, weather insights, and 24/7 agricultural support." />
-    <meta property="og:image" content="https://weguard.kodegas.com/og-image.jpg" />
+    <meta property="og:image" content="https://weguard.kodegas.com/uploads/logo.png" />
     <meta property="og:image:alt" content="WeGuard AI Crop Disease Detection Platform Interface" />
     <meta property="og:site_name" content="WeGuard by KODEGAS" />
     <meta property="og:locale" content="en_US" />
